@@ -1,5 +1,8 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
+from sql import Table
+
+from trytond import backend
 from trytond.model import ModelView, ModelSQL, fields, Unique
 from trytond.transaction import Transaction
 from trytond.pool import Pool
@@ -32,6 +35,12 @@ class Journal(ModelSQL, ModelView):
             ('currency', '=', Eval('currency', -1)),
             ],
         depends=['company_party', 'currency'])
+    account = fields.Many2One('account.account', "Account", required=True,
+        domain=[
+            ('kind', '!=', 'view'),
+            ('company', '=', Eval('company')),
+            ],
+        depends=['company'])
 
     @classmethod
     def __setup__(cls):
@@ -42,6 +51,27 @@ class Journal(ModelSQL, ModelView):
                 Unique(t, t.bank_account, t.company),
                 "Only one journal is allowed per bank account."),
             ]
+
+    @classmethod
+    def __register__(cls, module_name):
+        TableHandler = backend.get('TableHandler')
+        cursor = Transaction().connection.cursor()
+        table = TableHandler(cls, module_name)
+        sql_table = cls.__table__()
+        journal_account = Table('account_journal_account')
+
+        created_account = not table.column_exist('account')
+
+        super(Journal, cls).__register__(module_name)
+
+        # Migration from 4.8: new account field
+        if created_account and table.table_exist('account_journal_account'):
+            value = journal_account.select(journal_account.credit_account,
+                where=((journal_account.journal == sql_table.journal) &
+                    (journal_account.credit_account ==
+                        journal_account.debit_account)))
+            # Don't use UPDATE FROM because SQLite does not support it.
+            cursor.execute(*sql_table.update([sql_table.account], [value]))
 
     @staticmethod
     def default_currency():
